[tool.poetry]
name = "enacrestic"
version = "0.2.0"
description = "Automate backups using restic"
authors = ["Samuel Bancal <Samuel.Bancal@epfl.ch>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.7"
python-pidfile = "^3.0.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
