[tool.poetry]
name = "enacrestic"
homepage = "https://github.com/EPFL-ENAC/ENACrestic#readme"
repository = "https://github.com/EPFL-ENAC/ENACrestic"
version = "0.6.1"
description = "Automate backups using restic"
authors = ["Samuel Bancal <Samuel.Bancal@epfl.ch>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.7"
python-pidfile = "^3.0.0"
requests = "^2.28.1"
dynaconf = "^3.1.11"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
setuptools = "^66.1.1"
wheel = "^0.38.4"
build = "^0.10.0"
twine = "^4.0.2"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "dynaconf"
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
